--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <title>Frontend Mentor | Expenses chart component</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -33,24 +39,16 @@
         <div class="monthly-stats">
           <p>Total this month</p>
           <div class="stats">
-            <p class="spending"></p>
+            <p class="spending">$478.33</p>
             <div class="comparison">
-              <p class="difference"></p>
+              <p class="difference">+2.4%</p>
               <p>from last month</p>
             </div>
           </div>
         </div>
       </div>
     </main>
-    My balance $921.48 Spending - Last 7 days mon tue wed thu fri sat sun Total
-    this month $478.33 +2.4% from last month
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
     <script src="script.js"></script>
   </body>
 </html>
